# mitre-attack-python-lab

./: .env.backup  .env.example  .gitignore  .pre-commit-config.yaml  BADGES.md  CHANGELOG.md  CONTRIBUTING.md  DIRECT_VALIDATION_REPORT.md  DNSExploration_ByIP.py  Dockerfile  Final_Validation_Report.md  MARKET_ANALYSIS_AND_ROADMAP.md  PROJECT_STRUCTURE.md  README.md  README.md.backup  README_ENHANCEMENTS.md  SECURITY.md  SECURITY_REPORT.md  add_scan_method.py  api_server.err  bandit_report.json  bug_detector.py  chapter5_diagnostics.json  check_scan_method.py  custom_threat_hunt.py  debug_commands.sh  diagnose_issues.py  dns_search.txt  docker-compose.yml  docker_scout_report.json  e2e_test.py  final_precheck.sh  fix_honeyresolver.py  fix_imports.py  fix_issues.sh  fix_logger_issue.py  fix_pages.sh  grype_report.json  hadolint_report.txt  manual_commit.sh  (+28 more)
.github/: dependabot.yml
.github/workflows/: pages.yml  python-ci.yml  security-scan.yml
04-LEARNING/: Chapter-6-Defense-Evasion-Summary.md
config/: common_subdomains.txt  honeypot_config.json  persistence_allowlist.json  requirements-docker.txt  requirements.txt  threat_scores.json
config/alerts/: rules.yaml
docker/api/: Dockerfile
docs/: SETTP.md  SETUP.md  _config.yml  index.md
notebooks/: sample_analysis.ipynb
performance_testing/: README.md  plot_results.py  profile_cpu.py  profile_memory.py  test_dns_honeypot_load.py  test_port_scan_load.py
reports/: bandit_scan.json  sample_scan_report.md
scripts/: demo_defense_evasion.py  e2e_test_suite.py  e2e_validation.py  security_scan.sh  update_security_metrics.py  validate-api.sh
src/: api_server.py  debug_privilege.py  final_test.py  fix_common_issues.py  test_fix_api.py
src/api/: main.py  (+1 more)
templates/: dashboard.html
tests/: __init__.py  test_obfuscation_detector.py  test_persistence_auditor.py  test_port_scan.py  test_privilege_auditor.py  test_suite.py
(+67 files in other folders)
